<resources>
    <string name="app_name">Calorie_counter</string>
    <string name="profile">Profile</string>
    <string name="fork_knife_icon">Иконка нож и вилка</string>
    <string name="water_drop_icon">Иконка капля воды</string>
    <string name="norm">Норма</string>
    <string name="income">Получено</string>
    <string name="protein">Белки</string>
    <string name="fat">Жиры</string>
    <string name="carboh">Углеводы</string>
    <string name="calories">Калории</string>
    <string name="type_weight">Введите вес</string>
    <string name="receipt_icon">Иконка рецепт</string>
    <string name="plus_icon">Иконка плюс</string>
    <string name="name">Название</string>
    <string name="_100">На 100 грамм</string>
    <string name="about_formula">После нажатия на кнопку \"обновить\" данные будут рассчитаны по формуле Миффлина-Сан Жеора при отсутсвии любой физической нагрузки и с учетом выбранного дефицит(профицит) параметра</string>

    <string-array name="spinner_list">
        <item>Профицит 20%</item>
        <item>Профицит 10%</item>
        <item>Без дефицита (профицита)</item>
        <item>Дефицит 10%</item>
        <item>Дефицит 20%</item>
    </string-array>

</resources>