<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/add_meal_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="1dp"
        android:background="@color/black"
        android:clickable="true"
        android:contentDescription="@string/fork_knife_icon"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_liquid_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_toolbar"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/outline_restaurant_24" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/action_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="Дневник"
        app:titleTextAppearance="@style/title_text_style"
        app:titleTextColor="@color/gray" />

    <ImageView
        android:id="@+id/add_liquid_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="1dp"
        android:background="@color/black"
        android:clickable="true"
        android:contentDescription="@string/water_drop_icon"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_meal_button"
        app:layout_constraintTop_toBottomOf="@+id/action_toolbar"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/outline_water_drop_24" />

    <TextView
        android:id="@+id/textView"
        style="@style/main_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protein"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/action_toolbar" />

    <TextView
        android:id="@+id/textView2"
        style="@style/main_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fat"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/action_toolbar" />

    <TextView
        android:id="@+id/textView3"
        style="@style/main_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carboh"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/action_toolbar" />

    <TextView
        android:id="@+id/textView4"
        style="@style/main_text_style"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/calories"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/action_toolbar"
        app:layout_constraintVertical_bias="0.48000002" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/add_meal_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fat_income_text">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textView8"
        style="@style/main_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/norm"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView9"
        style="@style/main_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="107.5"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView10"
        style="@style/main_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="57.5"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView11"
        style="@style/main_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="193.9"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView12"
        style="@style/main_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="1723"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView13"
        style="@style/main_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/income"
        app:layout_constraintEnd_toStartOf="@+id/protein_income_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/protein_income_text"
        style="@style/main_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintEnd_toStartOf="@+id/fat_income_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/fat_income_text"
        style="@style/main_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintEnd_toStartOf="@+id/carboh_income_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/protein_income_text"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/carboh_income_text"
        style="@style/main_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintEnd_toStartOf="@+id/calories_income_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fat_income_text"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/calories_income_text"
        style="@style/main_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/carboh_income_text"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />


</androidx.constraintlayout.widget.ConstraintLayout>